--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'test.Main'
+mainClassName = 'app.Main'
 
 repositories {
     mavenCentral()
