--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'org.mongodb.morphia:morphia:1.2.1'
+    compile 'com.google.api-client:google-api-client:1.20.0'
+    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.8.0-beta'
+    compile "com.google.http-client:google-http-client-jackson:1.20.0"
+    compile 'com.google.http-client:google-http-client-gson:1.19.0'
 }
+
 
 buildscript {
     repositories {
